# bar

./: .gitignore  Makefile.am  README  configure.ac
src/: bar-example.cfg  main.c
